# Operation-systems

./: README.md
lab01/: .gitignore  CMakeLists.txt  child  main.cpp  reference.cpp
lab01/source/: child.cpp  child.hpp  main.cpp  parent.cpp  parent.hpp  tests.cpp
lab2/: CMakeLists.txt  main.c
lab2/include/: abc.h  blur.h
lab2/src/: abc.c  blur.c
lab4/: CMakeLists.txt  dinamic.c  static.c
lab4/include/: pi-sin.h
lab4/lib/: pi-sin-1.c  pi-sin-2.c
oc/oc/: main.cpp
oc/oc.xcodeproj/: project.pbxproj
oc/oc.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
oop/oop/: main.cpp
oop/oop.xcodeproj/: project.pbxproj
oop/oop.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
